# market

./: README.md  pyproject.toml  requirements.txt
src/: 14.2_main.py  15.1_main.py  class_category.py  class_iter.py  class_product.py  main.py
tests/: conftest.py  test_class_category.py  test_class_product.py
