[tool.poetry]
name = "market"
version = "0.1.0"
description = ""
authors = ["Arina <ilamanova.arina@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
mypy = "^1.11.2"
black = "^24.8.0"
isort = "^5.13.2"
pytest = "^8.3.2"
pytest-cov = "^5.0.0"

[black]
line-length = 119
exclude = ".git"

[isort]
line_length = 119

[mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude = "venv"
